tests/toy/neg/001441_mutation.toylang
program a = { var a : int int; } .
